# esmeralda

./: .dockerignore  .env.dev  .env.example  .gitignore  Dockerfile  LICENSE  README.md  bot.py  config.py  db.sqlite3  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml  go.mod  go.sum  main.go  main.py  my_database.db  plan.txt  pyproject.toml  requirements.txt  server_setup_esmeralda.sh  server_setup_fastapi.sh  soccerway-10-10-2024.xlsx  start.sh  tasks.py  test_main.py
app/: celery_app.py  config.py  dao.py  database.py  endpoints.py  main.py  models.py  repository.py  schemas.py  services.py  test_main.py
config/: config.go
database/: database.go  database_test.go
docs/: docs.md  esmeralda.excalidraw  structure.md  test_requests.json
frontend/: index.html  nuxt.config.ts  package.json
hadlers/: files.go  handlers.go  parsers.go
handlers/: auth.go  files.go  handlers.go
loki/: loki-config.yml
models/: models.go
mq/: mq.go
prometheus_data/: prometheus.yml
promtail/: promtail-config.yml
s3storage/: s3storage.go
scheduler/: cron.go
schemas/: schemas.go
services/: go.mod  go.sum  main.go
tasks/: tasks.go
templates/: index.html
tests/: test_main.py
traefik/: acme.json  config.yml  traefik.yml
utils/: jwt.go  utils.go
worker/: .env.example  config.py  main.py  parsers.py  pyproject.toml
worker/src/: config.py  logger.py  main.py  mq.py  mq_consumer.py  parsers.py  settings.py  storage.py
worker/src/parser/: result_publisher.py  s3_uploader.py
worker/src/parser/core/: temp_parser.py
(+111 files in other folders)
