[project]
name = "esmeralda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celery>=5.5.1",
    "fastapi[standard]>=0.115.12",
    "minio>=7.2.15",
    "pydantic-settings>=2.9.1",
    "redis>=5.2.1",
    "sqlmodel>=0.0.24",
]
