[project]
name = "esmeralda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.20.0.post0",
    "art>=6.5",
    "bcrypt>=4.3.0",
    "bs4>=0.0.2",
    "celery>=5.5.1",
    "fastapi[standard]>=0.115.12",
    "lxml>=5.4.0",
    "minio>=7.2.15",
    "passlib>=1.7.4",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "sqlmodel>=0.0.24",
    "xlwt>=1.3.0",
]
