[project]
name = "worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.63",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pika>=1.3.2",
    "pydantic-settings>=2.0.0",
    "pydantic>=2.0.0",
    "tqdm>=4.67.1",
]
